# Project-Coeus

./: .gitignore  CMakeLists.txt  README.md
include/: coeus.h  core.h  csv.h  neuron.h
src/: coeus.cpp  csv.cpp  main.cpp
